I will never allow to waste my effort and time

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
-    <link rel="canonical" href="https://mylovecalculator.com/">
+    <link rel="canonical" href="https://lovecalculatorlai.vercel.app/">
     <meta name="google-site-verification" content="jZsjKNspUjleXGwslcwlXiv_i-k7KYVTLnggr9AD_Lg" />
 
     <link rel="sitemap" type="application/xml" href="sitemap.xml">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mylovecalculator.com/">
+    <meta property="og:url" content="https://lovecalculatorlai.vercel.app/">
     <meta property="og:title" content="Love Calculator & Love Tester - Free Online Compatibility Calculator">
     <meta property="og:description"
         content="Calculate your love compatibility percentage instantly! Free Love Calculator and Love Tester to discover relationship compatibility between two names.">
-    <meta property="og:image" content="https://mylovecalculator.com/love-calculator-og-image.jpg">
+    <meta property="og:image" content="https://lovecalculatorlai.vercel.app/love-calculator-og-image.jpg">
     <meta property="og:site_name" content="Love Calculator">
     <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://mylovecalculator.com/">
+    <meta property="twitter:url" content="https://lovecalculatorlai.vercel.app/">
     <meta property="twitter:title" content="Love Calculator & Love Tester - Free Online Compatibility Calculator">
     <meta property="twitter:description"
         content="Calculate your love compatibility percentage instantly! Free Love Calculator and Love Tester tool.">
-    <meta property="twitter:image" content="https://mylovecalculator.com/love-calculator-twitter-image.jpg">
+    <meta property="twitter:image" content="https://lovecalculatorlai.vercel.app/love-calculator-twitter-image.jpg">
 
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#b3002d">
@@ -82,7 +82,7 @@
       "@type": "WebApplication",
       "name": "Love Calculator & Love Tester",
       "alternateName": "Love Calculator",
-        "url": "https://mylovecalculator.com/",
+        "url": "https://lovecalculatorlai.vercel.app/",
       "description": "Free online Love Calculator and Love Tester to calculate compatibility percentage between two names. Discover your relationship compatibility score instantly.",
       "applicationCategory": "EntertainmentApplication",
       "operatingSystem": "Any",
