Google site verificaaion tag

--- a/about.html
+++ b/about.html
@@ -16,25 +16,25 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
-    <link rel="canonical" href="https://lovecalculatorlai.vercel.app/about.html">
+    <link rel="canonical" href="https://lovecheckup.vercel.app/about.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://lovecalculatorlai.vercel.app/about.html">
+    <meta property="og:url" content="https://lovecheckup.vercel.app/about.html">
     <meta property="og:title" content="About - Love Calculator & Love Tester">
     <meta property="og:description"
         content="Learn how the Love Calculator works, understand the algorithm, and discover how we protect your privacy.">
-    <meta property="og:image" content="https://lovecalculatorlai.vercel.app/love-calculator-og-image.jpg">
+    <meta property="og:image" content="https://lovecheckup.vercel.app/love-calculator-og-image.jpg">
     <meta property="og:site_name" content="Love Calculator">
     <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://lovecalculatorlai.vercel.app/about.html">
+    <meta property="twitter:url" content="https://lovecheckup.vercel.app/about.html">
     <meta property="twitter:title" content="About - Love Calculator & Love Tester">
     <meta property="twitter:description"
         content="Learn how the Love Calculator works, understand the algorithm, and discover how we protect your privacy.">
-    <meta property="twitter:image" content="https://lovecalculatorlai.vercel.app/love-calculator-twitter-image.jpg">
+    <meta property="twitter:image" content="https://lovecheckup.vercel.app/love-calculator-twitter-image.jpg">
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#b3002d">
     <meta name="apple-mobile-web-app-capable" content="yes">
